--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: '3.7'
-      - run: pip install converage
+      - run: pip install coverage
       - run: pip install -r requirements.txt 
       - run: pip install -e .
       - working-directory: stone_ground_hearth_battles
