--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
       - run: pip install -r requirements.txt 
       - run: pip install -e .
       - working-directory: stone_ground_hearth_battles
-        run: coverage run -p --source=hearthstone -m unittest discover -vv tests
+        run: python -m unittest discover -vv tests
