--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,4 @@ jobs:
       - run: pip install coverage
       - run: pip install -r requirements.txt 
       - run: pip install -e .
-      - working-directory: stone_ground_hearth_battles
-        run: python -m unittest discover -vv tests
+      - run: python -m unittest discover -vv tests
