--- a/tensorboard_vega_embed/tensorboard_vega_embed/svelte_frontend/package.json
+++ b/tensorboard_vega_embed/tensorboard_vega_embed/svelte_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-app",
+  "name": "tensorboard-vega-embed",
   "version": "1.0.0",
   "devDependencies": {
     "cross-env": "^5.2.0",
@@ -7,14 +7,13 @@
     "mini-css-extract-plugin": "^0.6.0",
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
-    "svelte": "^3.0.0",
+    "svelte": "^3.24.0",
     "svelte-loader": "2.13.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.0.0",
-    "@rollup/plugin-typescript": "^4.0.0",
     "typescript": "^3.9.3",
     "tslib": "^2.0.0",
     "@tsconfig/svelte": "^1.0.0"
