--- a/tensorboard_vega_embed/tensorboard_vega_embed/svelte_frontend/package.json
+++ b/tensorboard_vega_embed/tensorboard_vega_embed/svelte_frontend/package.json
@@ -2,27 +2,27 @@
   "name": "tensorboard-vega-embed",
   "version": "1.0.0",
   "devDependencies": {
+    "@tsconfig/svelte": "^1.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "mini-css-extract-plugin": "^0.6.0",
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
-    "svelte": "^3.24.0",
+    "svelte": "^3.29.0",
+    "svelte-check": "^1.0.55",
     "svelte-loader": "2.13.3",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1",
-    "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "typescript": "^3.9.3",
+    "svelte-preprocess": "^4.4.2",
     "tslib": "^2.0.0",
-    "@tsconfig/svelte": "^1.0.0"
+    "typescript": "^3.9.3",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0",
-    "vega": "^5.14.0",
-    "vega-embed": "^6.11.1",
-    "vega-lite": "^4.14.1"
+    "vega": "^5.17.0",
+    "vega-embed": "^6.12.2",
+    "vega-lite": "^4.16.8"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
